--- a/app/stories/templates/stories/node_detail.html
+++ b/app/stories/templates/stories/node_detail.html
@@ -3,30 +3,31 @@
     <article class="media content-section">
         <img class="rounded-circle article-img" src="{{ object.author.profile.image.url }}">
         <div class="media-body">
-        <div class="article-metadata">
-            <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
-            <small class="text-muted">{{ object.date_posted|date:"d F, Y" }}</small>
-            {% if object.author == user %}
-                <div>
-                    {% if not object.child_nodes.all %}
-                        <a class="btn btn-secondary btn-sm mt-1 mb-1" href = "{% url 'node-update' object.id %}">Update</a>
-                        <a class="btn btn-danger btn-sm mt-1 mb-1" href = "{% url 'post-delete' object.id %}">Delete</a>
-                    {% endif %}
-                </div>
-            {% endif %}
-        </div>
-            <p class="text-muted">Previous Action: {{ object.action }}</p>
-            <p class="article-content">{{ object.content }}</p>
+            <div class="article-metadata">
+                <a class="mr-2" href="{% url 'user-posts' object.author.username %}">{{ object.author }}</a>
+                <small class="text-muted">{{ object.date_posted|date:"d F, Y" }}</small>
+                {% if object.author == user %}
+                    <div>
+                        {% if not object.child_nodes.all %}
+                            <a class="btn btn-secondary btn-sm mt-1 mb-1" href = "{% url 'node-update' object.id %}">Update</a>
+                            <a class="btn btn-danger btn-sm mt-1 mb-1" href = "{% url 'node-delete' object.id %}">Delete</a>
+                        {% endif %}
+                    </div>
+                {% endif %}
+            </div>
+                <h4 class="article-title">{{ object.story.title }}</h4>
+                <p class="text-muted">Previous Action: {{ object.action }}</p>
+                <p class="article-content">{{ object.content }}</p>
 
-            {% for next_node in object.child_nodes.all %}
-                <a class="btn btn-outline-primary ml-1 btn-block" href="{% url 'node-detail' next_node.id %}">{{ next_node.action }}</a>
-            {% endfor %}
-            
-            {% if object.content|length > 0 %}
-                <a class="btn btn-outline-dark ml-1 btn-block" href="{% url 'node-create' object.id %}">Add New Node</a>
-            {% else %}
-                <a class="btn btn-outline-primary ml-1 btn-block" href="{% url 'node-update' object.id %}">Edit</a>
-            {% endif %}
+                {% for next_node in object.child_nodes.all %}
+                    <a class="btn btn-outline-primary btn-block" href="{% url 'node-detail' next_node.id %}">{{ next_node.action }}</a>
+                {% endfor %}
+                
+                {% if object.content|length > 0 %}
+                    <a class="btn btn-outline-dark btn-block" href="{% url 'node-create' object.id %}">Add New Node</a>
+                {% else %}
+                    <a class="btn btn-outline-primary btn-block" href="{% url 'node-update' object.id %}">Edit</a>
+                {% endif %}
         </div>
     </article>
 {% endblock content %}
