--- a/app/stories/templates/stories/user_posts.html
+++ b/app/stories/templates/stories/user_posts.html
@@ -12,7 +12,18 @@
               <small class="text-muted">{{ post.date_posted|date:"d F, Y" }}</small>
             </div>
             <h2><a class="article-title" href="{% url 'post-detail' post.id %}">{{ post.title }}</a></h2>
-            <p class="article-content">{{ post.content }}</p>
+            <p class="article-content">{{ post.description }}</p>
+            
+            <div class="float-left">
+              {% for genre in post.genres.all %}
+                <a class="btn btn-outline-secondary" href="{% url 'genre-posts' genre.name %}">{{ genre.name }}</a>
+              {% endfor %}
+            </div>
+
+            <div class="float-right">
+              <p class="article-content mt-1">Story Depth: {{post.depth}}</p>
+            </div>
+
           </div>
         </article>
     {% endfor %}
